--- a/_posts/2077-10-01-cool.md
+++ b/_posts/2077-10-01-cool.md
@@ -6,7 +6,7 @@ description: "资源"
 tag: 资源分享
 ---   
 
-<h6><img src="https://robotkang-1257995526.cos.ap-chengdu.myqcloud.com/icon/copyright.png" alt="copyright" style="display:inline;margin-bottom: -5px;" width="20" height="20"> 版权声明：个人资料站，本页面的全部内容源于互联网，仅限于小范围内学习和参考，如果有侵权请第一时间联系我删除。敬请谅解! E-mail：[robotkang@qq.com]
+<h6><img src="https://robotkang-1257995526.cos.ap-chengdu.myqcloud.com/icon/copyright.png" alt="copyright" style="display:inline;margin-bottom: -5px;" width="20" height="20"> 版权声明：个人资料站，本页面的全部内容源于互联网，仅限于小范围内学习和参考，如果有侵权请第一时间联系我删除。敬请谅解! E-mail：[770818354@qq.com]
 <a target="_blank" href="https://yangzhu.fun/77101.html">原文地址：https://yangzhu.fun/77101.html </a>
 </h6>                           
 
